* Fixed layout issues

--- a/plugins/huduma/views/css/huduma.css
+++ b/plugins/huduma/views/css/huduma.css
@@ -123,6 +123,7 @@ div.report_comments_area {
 .dashboard_comment_form h4, .dashboard_container h4 { font-size: 13px; padding:5px 0 0 0; margin: 8px 0 0 0; }
 .dashboard_container { 
 	float: left;
+	padding-left: 10px;
 	min-height: 40em; 
 	width:575px;
 	font: 12px Arial,Helvetica,sans-serif
@@ -402,3 +403,5 @@ div.dash-snapshots { margin-top: -130px; }
 .entity-additional-info table th, .entity-additional-info table td { padding: 4px 7px !important; text-align: left; vertical-align: top; }
 .entity-additional-info table th { color: #FFFFFF; }
 .entity-additional-info h6{ padding: 0; margin: 0;}
+
+#ui-datepicker-div { display: none !important; }
